alleles: filter by clones count, find allele within the only one allele